# dcim-sort

./: .gitignore  Cargo.toml  README.MD  TODO.md
config/: compare_target.xml  template_config.xml  test_config.xml
src/: image.rs  index.rs  lib.rs  main.rs  pipeline.rs  sorting.rs
src/config/: mod.rs  seg_config.rs  sorter_config.rs
src/logging/: mod.rs
src/media/: kadamak_exif.rs  metadata_processor.rs  mod.rs  rexiv_proc.rs
src/pattern/: device.rs  fallback.rs  general.rs  mod.rs
src/sorting/: comparison.rs  fs_support.rs  mod.rs  translation.rs
