[package]
name = "dcim-sort"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexiv2 = "0.9.1"
kamadak-exif = "0.5.4"
clap = "3.0.0-beta.2"
chrono = "0.4"
minidom = "0.13.0"
md-5 = "0.10.0"
sha2 = "0.10.0"
regex = "1.5"